--- a/index.html
+++ b/index.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/bootstrap-purged.css">
+    <link rel="stylesheet" href="./css/transitions.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | NFT preview card component</title>
+
 </head>
-<body>
 
-  Equilibrium #3429
+<body class="container-fluid bg-dark min-vh-100 p-0 d-flex flex-column justify-content-center align-items-center">
+    <main class="container flex-grow-1 d-flex justify-content-center align-items-center">
+        <div class="card p-4 bg-success rounded-3 shadow-lg">
+            <a class="text-decoration-none rounded-2 hover-effect" href="#">
+                <img class="card-img-top" src="./images/image-equilibrium.jpg" alt="Equilibrium">
+                <div class="d-flex justify-content-center align-items-center hover-effect">
+                    <img src="./images/icon-view.svg" alt="View">
+                </div>
+            </a>
+            <div class="card-body p-0 pt-4 pb-3">
+                <a class="text-decoration-none" href="#">
+                    <h1 class="fw-bold fs-4 m-0">Equilibrium #3429</h1>
+                </a>
+                <p class="fw-light text-secondary m-0 py-3">Our Equilibrium collection promotes balance and calm.</p>
+                <div class="d-flex justify-content-between">
+                    <b class="fw-bold text-primary">
+                        <img class="pe-1" src="./images/icon-ethereum.svg" alt="Ethereum">
+                        0.041 ETH
+                    </b>
+                    <span class="fw-normal text-secondary">
+                        <img class="pe-1" src="./images/icon-clock.svg" alt="Clock">
+                        3 days left
+                    </span>
+                </div>
+            </div>
+            <div class="card-body p-0 pt-3 border-top border-info d-flex align-items-center">
+                <img class="border border-2 rounded-circle" width="38px" src="./images/image-avatar.png" alt="Avatar">
+                <p class="fw-normal text-secondary ps-3 m-0">Creation of <a class="text-decoration-none fw-normal" href="#">Jules Wyvern</a></p>
+            </div>
+        </div>
+    </main>
 
-  Our Equilibrium collection promotes balance and calm.
+    <footer class="text-secondary fw-light">
+        Challenge by <a class="text-decoration-none fw-normal" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a class="text-decoration-none fw-normal" href="https://github.com/ferlagher">Fernanda Laguna Hermida</a>.
+    </footer>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
