--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="card-body p-0 pt-3 border-top border-info d-flex align-items-center">
-                <img class="border border-2 rounded-circle" width="38px" src="./images/image-avatar.png" alt="Avatar">
+                <img class="border border-2 rounded-circle" width="32" src="./images/image-avatar.png" alt="Avatar">
                 <p class="fw-normal text-secondary ps-3 m-0">Creation of <a class="text-decoration-none fw-normal" href="#">Jules Wyvern</a></p>
             </div>
         </div>
